Fixed Image overlapping with buttons

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -39,7 +39,7 @@ header {
 
 /* ME  */
 .me {
-  margin-top: -2rem;
+  margin-top: 0rem;
   /* background: linear-gradient(var(--color-primary), transparent); */
   width: 25rem;
   height: 30rem;
@@ -47,7 +47,7 @@ header {
   left: calc(50% - 11rem);
   /* border-radius: 1.5rem 1.5rem 1rem 1rem; */
   overflow: hidden;
-  padding: 5rem 1.5rem 1.5rem 1.5rem;
+  padding: 2.3rem;
 }
 
 .current-project{
